<resources>
    <string name="app_name">taskmaster</string>
    <string name="click_me">ADD TASK</string>
    <string name="all_tasks">All Tasks</string>
    <string name="my_tasks">MY Tasks</string>
    <string name="second_greeting">welcome</string>
    <string name="second_description">second description</string>
    <string name="background_img">img</string>
    <string name="textview">Username</string>
    <string name="Add_Text">Add task</string>
    <string name="Task_title">Task Title</string>
    <string name="task_body">Task Body</string>
    <string name="backButton">Back</string>
    <string name="AllTask">All Tasks Page</string>
    <string name="submit">SUBMIT</string>
    <string name="User_Setting">user Setting</string>
    <string name="btn_save">Save</string>
    <string name="select_task_title">select task title</string>
    <string name="view">view</string>
    <string name="action_setting">setting</string>
    <string name="action_copyright">copyright</string>
    <string name="title">Title</string>
    <string name="description">Description TaskDetails</string>
    <string name="state">State</string>
    <string name="task1">task1</string>
    <string name="task2">task2</string>
    <string name="task3">task3</string>


    <string-array name="Teams">
        <item>Alpha</item>
        <item>Beta</item>
        <item>Gamma</item>

    </string-array>

    <string-array name="state_items">
        <item>NEW</item>
        <item>ASSIGNED</item>
        <item>IN_PROGRESS</item>
        <item>COMPLETE</item>
    </string-array>

    <string-array name="tasks">
        <item>java</item>
        <item>c#</item>
        <item>JS</item>

    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_text">Don\'t have account signup</string>
    <string name="label_enter_code">Enter verification code</string>
    <string name="logout">logout</string>
    <string name="upload">Upload</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="play">play</string>
    <string name="translate">translate</string>
    <string name="interstitial_ad">Interstitial Ad</string>
    <string name="rewarded_ad">rewarded Ad</string>
</resources>